manifests/ingress/ingress_rules/atlassian_ingress_rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: confluence
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.org/client-max-body-size: "50m"
  namespace: atlassian

spec:
  tls:
  - hosts:
    - wiki.kbmanseau.com
    secretName: confluence-tls
  - hosts:
    - jira.kbmanseau.com
    secretName: jira-tls
  rules:
  - host: wiki.kbmanseau.com
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence-service
          servicePort: 443
  - host: jira.kbmanseau.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jira-service
          servicePort: 443
