manifests/ingress/ingress_rules/bookstack_ingress_rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookstack
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: bookstack

spec:
  tls:
  - hosts:
    - bookstack.kbmanseau.com
    secretName: bookstack-tls
  rules:
  - host: bookstack.kbmanseau.com
    http:
      paths:
      - path: /
        backend:
          serviceName: bookstack-service
          servicePort: 80
